[tool.poetry]
name = "my_dash_app"
version = "0.1.0"
description = "A simple Dash Hello World application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.9.3"
plotly = "^5.14.1"
pandas = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
